# milkdrop-pi

./: CLAUDE.md  Cargo.toml  build.rs
src/: analysis.rs  audio.rs  cli.rs  icon.rs  main.rs  render.rs  transition.rs
src/overlay/: atlas.rs  mod.rs  text.rs
src/shaders/: crossfade.wgsl  equalizer.wgsl  flame_compute.wgsl  flame_render.wgsl  gol.wgsl  polar.wgsl  terrain.wgsl  text.wgsl
src/visualizations/: equalizer.rs  flame.rs  gol.rs  mod.rs  polar.rs  terrain.rs
