[package]
name = "milkdrop-pi"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
rustfft = "6"
ringbuf = "0.4"
wgpu = "23"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
fontdue = "0.9"

[build-dependencies]
winresource = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
